--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body {
     justify-content: space-between;
     align-items: center;
     min-height: 100vh;
+    border-radius: 8px;
+    background-color: #FFFFFF;
+    position: relative;
+    box-shadow: 0px 2px 24px rgba(0, 0, 0, 0.1);
 }
 
 
@@ -19,9 +23,10 @@ header{
     font-family: 'Inconsolata', monospace;
     text-align: left;
     width: 100%;
-    padding-top: 16px;
-    padding-left: 32px;
+    padding-top: 40px;
+    padding-left: 77px;
     font-size: 1rem;
+    color: #333333
 }
 
 main {
@@ -52,6 +57,7 @@ img{
     max-height: 80vh;
     margin: 16px;
     width: 90%;
+    color: #333333;
 }
 
 .content p {
@@ -60,18 +66,19 @@ img{
     margin: 16px;
     width: 60%;
     color:#4f4f4f;
+    line-height: 36px;
 }
 
 .content button {
     font-family: inherit;
     display:block;
-    background-color: #333;
-    color:white;
+    background-color: #333333;
+    color: #FFFFFF;
     border:none;
     border-radius: 4px;
     font-size: 0.875rem;
     margin:16px;
-    padding: 16px;
+    padding: 24px;
     transition: all 200ms ease-in-out;
 }
 
